# Python-project-Scripts

./: .editorconfig  .gitignore  .gitmodules  CONTRIBUTING.md  Calculator  Digital_Clock_with_python.py  README.md  dice_game_"barbut"  number_guessing_game.py  rock_paper_scissor.py  tea.yaml
.github/: config.yml
AUTOMATION/: pdfToText.py
AWS/: empty-s3-bucket.py
Age calculator/: README.md  age.py
Audio Captcha Generator/: README.md  code.py
AudioBuk/: audio.py
AutoMoveFiles/: AutoMoveFiles.py  README.md  pyproject.toml
BlackJackGame/: BlackJackGame.py  ReadMe.md
BullsAndCows/: README.md
CHESS/: Chess.css  Chess.js  index.html
CLI-Photo-Watermark/: main.py  requirements.txt
CSV_files/: README.md  pyproject.toml  read_csv.py  write_csv.py
CSV_files/assets/: addresses.csv  course_name.csv
Calculator_GUI/: README.md
Capture Image and Save in Local/: README.md
Chimera_script/: webGL_images.py
Compress Image/: README.md  code.py  img_comp.py
ConsoleSnake/: getch.py
Contact-management/: README.md  contact_management.py
Countdown Timer/: README.md  timer.py
Currency Converter/: README.md
Current time/: README.md  getting_current_time.py
Cyber_security  projects/: CLIENT.py  README.md  Remote Code Execution.py  SERVER.py  hotelbill.py  port_scanner.py  pwn.py  threading.py
DATETIME/: date_time_by_day.py
DOM EXTRACTION/: README.md  main.py
Data Structures and Algorithms/: .gitignore  Bubble_sort.py  CODE_OF_CONDUCT.md  Heap_sort.py  Insertion_sort.py  README.md  numbers.txt  (+14 more)
mp3-to-text/: README.md  extract_text.py  pyproject.toml
(+2225 files in other folders)
