[tool.poetry]
name = "automovefiles"
version = "0.1.0"
description = ""
authors = ["HishamKhalil1990 <hisham.khalil1990@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
watchdog = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
