[tool.poetry]
name = "csv_files"
version = "0.1.0"
description = ""
authors = ["Omar-zoubi <o.fandi02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
